--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,17 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "tabWidth": 4
+  "tabWidth": 4,
+  "printWidth": 120,
+  "arrowParens": "always",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "jsxSingleQuote": true,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "semi": true,
+  "useTabs": false
 }
