--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "chat-app",
   "version": "0.0.1",
-  "type": "module",
   "description": "",
+  "type": "commonjs",
   "author": "",
   "private": true,
   "scripts": {
@@ -32,6 +32,7 @@
     "hash-generator": "^0.1.0",
     "mysql2": "^3.9.4",
     "portfinder": "^1.0.32",
+    "reflect-metadata": "~0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
