--- a/package.json
+++ b/package.json
@@ -20,47 +20,50 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/core": "^10.3.8",
+    "@nestjs/microservices": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.8",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "mysql2": "^3.9.4",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "crypto": "^1.0.1",
+    "mysql2": "^3.9.7",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^10.3.2",
     "@nestjs/mapped-types": "*",
-    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/schematics": "^10.1.1",
     "@nestjs/swagger": "^7.3.1",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "29.2.4",
-    "@types/node": "18.11.18",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@nestjs/testing": "^10.3.8",
+    "@types/express": "^4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.12.7",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "29.3.1",
+    "jest": "29.7.0",
     "prettier": "^3.2.5",
-    "prettier-eslint": "16.2.0",
+    "prettier-eslint": "16.3.0",
     "prettier-eslint-cli": "8.0.1",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
     "swagger-ui-express": "^5.0.0",
-    "ts-jest": "29.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "ts-jest": "29.1.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.4.5"
   },
   "jest": {
     "moduleFileExtensions": [
