--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "jest": "29.7.0",
     "prettier": "^3.2.5",
     "prettier-eslint": "16.3.0",
