added .http file, fixed requests, fixed eslint rules + more

--- a/.gitignore
+++ b/.gitignore
@@ -27,13 +27,7 @@ lerna-debug.log*
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
 # Custom
 .env
 package-lock.json
+**/http-client.private.env.json
