added docker config
added docker config

--- a/.env.dist
+++ b/.env.dist
@@ -6,7 +6,7 @@ DB_HOST=localhost
 DB_PORT=3308
 DB_USERNAME=filipozbolt
 DB_PASSWORD=123
-DB_DATABASE=chat_app
+DB_DATABASE_NAME=chat_app
 
 # NestJS
 NEST_PORT=3000;
