updated project readme and minor updates

--- a/.env.dist
+++ b/.env.dist
@@ -1,12 +1,16 @@
-# For everyone to use it
+# For everyone to use it, since this is test app
 
 # Database
+## DB_ROOT_USER=root
+## DB_ROOT_PASSWORD=
 DB_TYPE=mariadb
 DB_HOST=localhost
 DB_PORT=3308
 DB_USERNAME=filipozbolt
 DB_PASSWORD=123
-DB_DATABASE_NAME=chat_app
+DB_NAME=chat_app
+DB_SYNCHRONIZE=true
 
 # NestJS
 NEST_PORT=3000;
+SECRET=filipozbolt
