--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: mariadb
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_DATABASE_NAME}
+      MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_USERNAME}
     ports:
@@ -27,7 +27,7 @@ services:
       TYPEORM_PORT: ${DB_PORT}
       TYPEORM_USERNAME: ${DB_USERNAME}
       TYPEORM_PASSWORD: ${DB_PASSWORD}
-      TYPEORM_DATABASE: ${DB_DATABASE_NAME}
+      TYPEORM_DATABASE: ${DB_NAME}
       TYPEORM_SYNCHRONIZE: ${DB_SYNCHRONIZE}
       TYPEORM_ENTITIES: 'dist/**/*.entity.js'
 
